EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==07/27/2010==
Trevius: Exported SpellFinished(spell_id, spell_target = this, mana_cost = 0) to Perl Mob.

==07/26/2010==
Trevius: (Secrets) Added quest::creategroundobjectfrommodel(modelname, x, y, z, heading, [type]) command.
Trevius: (Secrets) quest::creategroundobject(itemid, x, y, z, heading) now returns object ID.
Trevius: (Secrets) Added Object List Iteration functions GetObjectByDBID(id), GetObjectByID(id), GetObjectList().
Trevius: (Secrets) exported Objects to Perl with the following commands:
		IsGroundSpawn(), Close(), Delete(reset_state=false), StartDecay(), DeleteItem(index), IsObject(), 
		Save(), SetID(set_id), ClearUser(), DBID(), GetID(), GetX(), GetY(), GetZ(), GetHeading(), VarSave(), 
		GetType(), SetType(type), GetIcon(), SetIcon(icon), GetItemID(), SetItemID(itemid), SetLocation(x, y, z), 
		SetX(XPos), SetY(YPos), SetZ(ZPos), SetHeading(heading), SetModelName(name), GetModelName(), Repop(), Depop().

==07/25/2010==
Trevius: (Caryatis) Added the following Spell Effects:
		SE_SympatheticProc, SE_ImprovedSpellEffect, SE_SpellVulnerability, SE_SpellTrigger
		SE_InterruptCasting, SE_CastOnWearoff, SE_ApplyEffect, SE_BossSpellTrigger, SE_Twincast
		SE_HealRate, SE_SkillDamageTaken, SE_EffectOnFade, SE_MaxHPChange, and SE_EndurancePool.

==07/19/2010==
gaeorn: fix for foraging

==07/17/2010==
JJ: Added events for tradeskill failure and success.
JJ: Added quest flag for tradeskills to be handled by perl. Required SQL in the utils folder.

==07/14/2010==
Trevius: Hopefully fixed the issue for SoF+ clients alcohol consumption causing item loss.

==07/13/2010==
Derision: Azone2 - Fixed crash processing fungalforest and possibly other Underfoot V4 .eqg zones.
Derision: Azone2 - Culled placeable shrooms to reduce fungalforest .map from ~80 to ~20MB.

==07/11/2010==
Trevius: Live - Environmental damage is now functional on this client.

==07/08/2010==